--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     
+    <script src="calculator.js" async></script>
+    <script src="secondHomework.js"></script>
 </body>
 </html>
