--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="calculator.js" async></script>
+
+    <h1>Мой сайт</h1>
+    <input class="input" type="text">
+
+    <script src="https://cdn.jsdelivr.net/lodash/4.10.0/lodash.js"></script>
+    <!-- <script src="calculator.js" async></script> -->
     <script src="secondHomework.js"></script>
 </body>
 </html>
